Bug 101079 - [BXT] gem_spin_batch some subtests are failing causing gpu hung
Summary: [BXT] gem_spin_batch some subtests are failing causing gpu hung
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-17 19:36 UTC by Humberto Israel Perez Rodriguez
Modified: 2017-05-19 20:25 UTC (History)
1 user (show)

See Also:
i915 platform: BXT
i915 features: GPU hang


Attachments
dmesg.log (111.94 KB, text/plain)
2017-05-17 19:36 UTC, Humberto Israel Perez Rodriguez
no flags Details

Description Humberto Israel Perez Rodriguez 2017-05-17 19:36:05 UTC
Created attachment 131391 [details]
dmesg.log

The following test cases are failing on BXT


Test cases:
======================================
igt@gem_spin_batch@spin-each
igt@gem_spin_batch@basic-blt
igt@gem_spin_batch@basic-bsd
igt@gem_spin_batch@basic-bsd1
igt@gem_spin_batch@basic-bsd2
igt@gem_spin_batch@basic-vebox
igt@gem_spin_batch@basic-render


output :

IGT-Version: 1.18-g93215b0 (x86_64) (Linux: 4.12.0-rc1-drm-tip-ww20-commit-713f8ec+ x86_64)
(gem_spin_batch:1301) igt-core-DEBUG: Test requirement passed: !igt_run_in_simulation()
(gem_spin_batch:1301) drmtest-DEBUG: Test requirement passed: !(fd<0)
(gem_spin_batch:1301) igt-debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(gem_spin_batch:1301) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1301) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1301) igt-debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(gem_spin_batch:1301) igt-debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(gem_spin_batch:1301) igt-core-DEBUG: Starting subtest: spin-each
(gem_spin_batch:1303) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1303) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1303) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1303) igt-dummyload-DEBUG: Test requirement passed: nengine
(gem_spin_batch:1304) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1304) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1304) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1304) igt-dummyload-DEBUG: Test requirement passed: nengine
(gem_spin_batch:1303) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1303) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1303) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1303) igt-dummyload-DEBUG: Test requirement passed: nengine
(gem_spin_batch:1304) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1304) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1304) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1304) igt-dummyload-DEBUG: Test requirement passed: nengine
(gem_spin_batch:1306) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1306) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1306) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1306) igt-dummyload-DEBUG: Test requirement passed: nengine
(gem_spin_batch:1306) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1306) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1306) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1306) igt-dummyload-DEBUG: Test requirement passed: nengine
(gem_spin_batch:1308) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1308) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1308) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1308) igt-dummyload-DEBUG: Test requirement passed: nengine
(gem_spin_batch:1308) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1308) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1308) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1308) igt-dummyload-DEBUG: Test requirement passed: nengine
(gem_spin_batch:1303) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1304) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1306) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1308) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_spin_batch:1301) igt-aux-CRITICAL: Test assertion failure function sig_abort, file igt_aux.c:443:
(gem_spin_batch:1301) igt-aux-CRITICAL: Failed assertion: !"GPU hung"
Stack trace:
  #0 [__igt_fail_assert+0x101]
(gem_spin_batch:1303) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1303) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1303) igt-dummyload-DEBUG: Test requirement passed: nengine
  #1 [sig_abort+0x3a]
(gem_spin_batch:1304) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1304) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1304) igt-dummyload-DEBUG: Test requirement passed: nengine
  #2 [killpg+0x40]
Completed 2 loops in 7417502294 ns, target 74
(gem_spin_batch:1304) CRITICAL: Test assertion failure function spin, file gem_spin_batch.c:62:
(gem_spin_batch:1304) CRITICAL: Failed assertion: 100 * timeout_100ms * loops <= (100 + 5) * elapsed && 100 * timeout_100ms * loops >= (100 - 5) * elapsed
(gem_spin_batch:1304) CRITICAL: 'timeout_100ms * loops' != 'elapsed' (200000000 not within 5% tolerance of 7417502294)
Stack trace:
  #3 [__wait+0x1e]
  #4 [igt_waitchildren+0x68]
  #0 [__igt_fail_assert+0x101]
(gem_spin_batch:1306) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_spin_batch:1306) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1306) igt-dummyload-DEBUG: Test requirement passed: nengine
  #1 [spin.constprop.1+0x18e]
Completed 2 loops in 7416060841 ns, target 74
(gem_spin_batch:1306) CRITICAL: Test assertion failure function spin, file gem_spin_batch.c:62:
(gem_spin_batch:1306) CRITICAL: Failed assertion: 100 * timeout_100ms * loops <= (100 + 5) * elapsed && 100 * timeout_100ms * loops >= (100 - 5) * elapsed
(gem_spin_batch:1306) CRITICAL: 'timeout_100ms * loops' != 'elapsed' (200000000 not within 5% tolerance of 7416060841)
Stack trace:
  #2 [<unknown>+0x18e]
  #0 [__igt_fail_assert+0x101]
  #1 [spin.constprop.1+0x18e]
  #2 [<unknown>+0x18e]
(gem_spin_batch:1308) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
  #5 [__real_main88+0x107]
  #6 [main+0x33]
  #7 [__libc_start_main+0xf1]
  #8 [_start+0x29]
(gem_spin_batch:1308) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_spin_batch:1308) igt-dummyload-DEBUG: Test requirement passed: nengine
  #9 [<unknown>+0x29]
Subtest spin-each failed.
**** DEBUG ****
(gem_spin_batch:1301) igt-aux-CRITICAL: Test assertion failure function sig_abort, file igt_aux.c:443:
(gem_spin_batch:1301) igt-aux-CRITICAL: Failed assertion: !"GPU hung"
****  END  ****
Subtest spin-each: FAIL (7.434s)
Completed 2 loops in 7421303259 ns, target 74
(gem_spin_batch:1308) CRITICAL: Test assertion failure function spin, file gem_spin_batch.c:62:
(gem_spin_batch:1308) CRITICAL: Failed assertion: 100 * timeout_100ms * loops <= (100 + 5) * elapsed && 100 * timeout_100ms * loops >= (100 - 5) * elapsed
(gem_spin_batch:1308) CRITICAL: 'timeout_100ms * loops' != 'elapsed' (200000000 not within 5% tolerance of 7421303259)
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [spin.constprop.1+0x18e]
(gem_spin_batch:1301) igt-core-DEBUG: Exiting with status code 99
(gem_spin_batch:1301) igt-debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'

======================================
             Software
======================================
kernel version              : 4.12.0-rc1-drm-tip-ww20-commit-713f8ec+
architecture                : x86_64
os version                  : Ubuntu 16.10
os codename                 : yakkety
kernel driver               : i915
bios revision               : 5.6
bios release date           : 03/10/2017
ksc                         : 16.0

======================================
        Graphic drivers
======================================
Component: drm
    tag: libdrm-2.4.80-11-ga2fa2e0
    commit: a2fa2e08692483cf9f4d06caa6e0f0add59e3343

Component: cairo
    tag: 1.15.4-21-g9d44136
    commit: 9d44136ef8e2a1ad2c6631beb4bbdaeed7a2dad8

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.18-173-g93215b0
    commit: 93215b00db06ba568c34a6cad194f4749bbfbc9d

Component: piglit
    tag: piglit-v1
    commit: 7352f4a98a23eae1201bfc4a0121d9c3a969d23f

======================================
             Hardware
======================================
motherboard model          : NUC6CAYS
motherboard id             : NUC6CAYB
form factor                : Desktop
manufacturer               : Intelcorporation
cpu family                 : Celeron
cpu family id              : 6
cpu information            : Intel(R) Celeron(R) CPU J3455 @ 1.50GHz
gpu card                   : Intel Corporation Device 5a85 (rev 0b) (prog-if 00 [VGA controller])
memory ram                 : 15.54 GB
cpu thread                 : 4
cpu core                   : 4
cpu model                  : 92
cpu stepping               : 9
signature                  : Type 0, Family 6, Model 92, Stepping 9
current cd clock frequency : 384000 kHz
maximum cd clock frequency : 624000 kHz
displays connected         : DP-1 DP-2

======================================
             Firmware
======================================
dmc fw loaded             : yes
dmc version               : 1.7
guc fw loaded             : NONE
guc version wanted        : 0.0
guc version found         : 0.0
Add Comment
Comment 1 Chris Wilson 2017-05-17 20:44:28 UTC
commit 49e083a29a0942309c877ea8e9275fa985a5bf25
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed May 17 21:41:30 2017 +0100

    igt/gem_spin_batch: Avoid interleave throttle within open spin batches
Comment 2 Humberto Israel Perez Rodriguez 2017-05-19 19:51:03 UTC
(In reply to Chris Wilson from comment #1)
> commit 49e083a29a0942309c877ea8e9275fa985a5bf25
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Wed May 17 21:41:30 2017 +0100
> 
>     igt/gem_spin_batch: Avoid interleave throttle within open spin batches

Yes, i confirm that this test pass on BXT


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.