igt/gem_spin_batch: Avoid interleave throttle within open spin batches

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=101079
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>