lib/igt_dummyload.h
@@ -37,7 +37,8 @@ typedef struct igt_spin {
 	uint32_t *batch;
 } igt_spin_t;
 
-igt_spin_t *igt_spin_batch_new(int fd, int engine, unsigned int dep_handle);
+igt_spin_t *__igt_spin_batch_new(int fd, int engine, unsigned int dep);
+igt_spin_t *igt_spin_batch_new(int fd, int engine, unsigned int dep);
 void igt_spin_batch_set_timeout(igt_spin_t *spin, int64_t ns);
 void igt_spin_batch_end(igt_spin_t *spin);
 void igt_spin_batch_free(int fd, igt_spin_t *spin);
